--- a/game.css
+++ b/game.css
@@ -1,9 +1,14 @@
+@font-face {
+  font-family: 'PongFont';
+  src: url('INVASION2000.TTF');
+}
+
 html, body {
   height: 100%;
 }
 
 .heading-container {
-  height: 1em;
+  height: 10%;
   padding: 0;
   margin: 0;
   display: -webkit-box;
@@ -13,6 +18,8 @@ html, body {
   display: flex;
   align-items: center;
   justify-content: center;
+  font-family: 'PongFont';
+  font-size: 5em;
 }
 
 body {
@@ -20,7 +27,7 @@ body {
 }
 
 .canvas-container {
-  height: 100%;
+  height: 80%;
   padding: 0;
   margin: 0;
   display: -webkit-box;
