--- a/game.css
+++ b/game.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'PongFont';
-  src: url('INVASION2000.TTF');
+  src: url('assets/INVASION2000.TTF');
 }
 
 html, body {
