--- a/game.css
+++ b/game.css
@@ -38,3 +38,16 @@ body {
   align-items: center;
   justify-content: center;
 }
+
+#score-container {
+  height: 0;
+  padding: 0;
+  margin: 0;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
